Add weekly target big-number flow
